# 42sh

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
.github/workflows/: main.yml
eval/: basic_builtins.c  builtins_test.c
src/: Makefile  Makefile.am  Makefile.in  a  main.c
src/.deps/: 42sh-main.Po
src/ast/: Makefile  Makefile.am  Makefile.in  ast.c  ast.h  main.c
src/ast/.deps/: libast_a-ast.Po
src/eval/: Makefile  Makefile.am  Makefile.in  advanced_builtins.c  basic_builtins.c  builtins.h  cd_builtin.c  eval_pipe_negation.c  eval_pipe_negation.h  eval_redirections.c  eval_redirections.h  evaluation_process.c  evaluation_process.h
src/eval/.deps/: libeval_a-basic_builtins.Po  libeval_a-evaluation_process.Po
src/eval/test/: builtins_test.c  main.c  test_builtins.py
src/expansion/: Makefile.am  expansion.c  expansion.h
src/input/: Makefile  Makefile.am  Makefile.in  input.c  input.h  main.c  test_input.c
src/input/.deps/: libinput_a-input.Po
src/input/tests/: test_input.py
src/lexer/: Makefile  Makefile.am  Makefile.in  eval_token  lexer.c  lexer.h  test  test_lexer.c  test_lexer.py  token.h  toto.sh
src/lexer/.deps/: liblexer_a-lexer.Po
src/lexer/tests/: peek_printer.c  test_lexer.c  test_lexer.py  test_lexer_peek.py  token_printer.c  toto.sh
src/lexer/tests/test_files/: simple_test_2  simple_test_3  simple_test_4  simple_test_5  test_blank_and_comments  test_blank_and_comments_ref  test_double_quote  test_mostly_blank  test_mostly_blank_ref  test_only_blank  test_only_blank_ref  test_random_1  test_random_10  test_random_11  test_random_11_ref  test_random_12  test_random_12_ref  test_random_1_ref  test_random_2  test_random_2_ref  test_random_3  test_random_3_ref  test_random_4  test_random_4_ref  test_random_5  test_random_5_ref  test_random_6  test_random_6_ref  test_random_7  test_random_7_ref  test_random_8  test_random_8_ref  test_random_9  test_random_9_ref  test_simple_if_case  test_simple_quote  test_token_ampredir_input  test_token_ampredir_output  test_token_and  test_token_append_output  (+6 more)
src/lexer2/: lexer.c  lexer.h
src/parser/: .main.c.swp  .parser.h.swp  Makefile  Makefile.am  Makefile.in  main.c  parser.c  parser.h  parser1.c  parser_compound_list.c  parser_compound_list.h  parser_input.c  parser_input.h  parser_loops.c  parser_redirections.c  parser_rule_shell.c  parser_simplecmd.c  rule_shell.c  rule_shell.h  test
src/parser/.deps/: libparser_a-parser.Po
src/parser/tests/: main.c  parser_test.py
src/pretty_print/: little_print_ast.h
src/pretty_print_ast/: Makefile.am  little_print_ast.c  pretty_print_ast.c  print_ast.h
src/utils/Dstring/: Makefile.am  dstring.c  dstring.h
tests/: test1.sh  test_lexer.py  test_suite.py  testbuiltins.py  testsuite.py  testsuite_double_quotes.py  testsuite_mine.py  testsuite_redirs_pipes.py  token_printer.c
tests/builtins/: test_break0.sh  test_break3.sh  test_continue3.sh  test_echo.sh  test_export0.sh  test_export1.sh  test_export2.sh  test_unset0.sh  test_until0.sh  test_until1.sh  test_until2.sh  test_until3.sh  test_until4.sh  test_until5.sh  test_until6.sh  test_until7.sh  test_until8.sh  test_until9.sh  test_while1.sh  test_while10.sh  test_while11.sh  test_while12.sh  test_while13.sh  test_while2.sh  test_while3.sh  test_while4.sh  test_while5.sh  test_while6.sh  test_while7.sh  test_while8.sh  test_while9.sh
tests/random/: test_random3.sh
tests/step1/command_lists/: test_many_commands1.sh  test_many_commands2.sh  test_no_space.sh  test_space.sh  test_space2.sh
tests/step1/comments/: test_inline_comment.sh  test_just_a_comment.sh  test_not_first.sh  test_quoted.sh  test_sheebang.sh  test_space_comments.sh
tests/step1/expansion/: test_IFS.sh  test_OLDPWD.sh  test_PWD.sh  test_RANDOM.sh  test_at.sh  test_dollar.sh  test_hashtag.sh  test_positional_args.sh  test_return_code.sh  test_star.sh  test_uid.sh
tests/step1/if_commands/: test_bad_if1.sh  test_bad_if2.sh  test_bad_if3.sh  test_bad_if4.sh  test_colliding_keywords.sh  test_embeded_list1.sh  test_embeded_list2.sh  test_if_false.sh  test_if_false_else.sh  test_if_inside_if.sh  test_if_inside_if_semicolon.sh  test_simple_if.sh  test_simple_if_elif.sh  (+2 more)
tests/step2/: bad_weak1  bad_weak2  bad_weak3  bad_weak4  differen_successive_quotes  differen_successive_quotes1  differen_successive_quotes2  differen_successive_quotes3  differen_successive_quotes4  simple_full_quoting  simple_strong_quoting
(+70 files in other folders)
