AC_INIT([42sh], [1.0], [marc.wang@epita.fr])
AM_INIT_AUTOMAKE([subdir-objects] [foreign])

AC_PROG_CC
AX_COMPILER_FLAGS([], [], [], [-Wall -Wextra -Werror -std=c99 -pedantic])

AM_PROG_AR
AC_PROG_RANLIB

AC_CONFIG_TESTDIR([tests])

AC_CONFIG_FILE([
    Makefile
    src/parser/Makefile
    src/lexer/Makefile
    tests/Makefile
])

AC_OUTPUT