AC_INIT([42sh], [1.0], [marc.wang@epita.fr])
AM_INIT_AUTOMAKE([subdir-objects] [foreign])

AC_PROG_CC

AM_PROG_AR
AC_PROG_RANLIB

AC_CONFIG_FILES([
    Makefile
    src/Makefile
    src/parser/Makefile
    src/lexer/Makefile
    src/ast/Makefile
    src/input/Makefile
    src/eval/Makefile
    src/expansion/Makefile
    src/utils/Dstring/Makefile
])

AC_OUTPUT